# mongo-with-docker

./: README.md  docker-compose.yml  start.sh  stop.sh
administration/: backup.sh
administration/replication/: docker-compose.yml  replication.sh
data/modeling-solution/one-to-one/: option1.json  option2.json
node/: package-lock.json  package.json
python/: pyproject.toml
query/: basic.js  create.js  delete.js  find.js  update.js
